# aoc2024-rs

./: Cargo.toml  build.rs
benches/: bench.rs
src/: day1.rs  day10.rs  day11.rs  day13.rs  day14.rs  day2.rs  day21.rs  day22.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  lib.rs  main.rs
