[package]
name = "aoc2024_rs"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
memchr = "2.7.4"
bit-set = "0.8.0"
arrayvec = "0.7.6"
fxhash = "0.2.1"
rayon = "1.10.0"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[profile.release]
codegen-units = 1
panic = "abort"
lto = true

[profile.dev.build-override]
opt-level = 3

[[bench]]
name = "bench"
harness = false
